--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md bg-body py-3">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="#"
+      <a class="navbar-brand d-flex align-items-center" href="/"
         ><span
           class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"
           ><svg
@@ -39,7 +39,7 @@
             <a class="nav-link" href="#">Welcome Gláucio!</a>
           </li>
         </ul>
-        <a href="#">(Sign Out)</a>
+        <a href="#" onclick="logout()">(Sign Out)</a>
       </div>
     </div>
   </nav>
