--- a/src/css/style.css
+++ b/src/css/style.css
@@ -361,3 +361,9 @@ th:first-child, td:first-child {
 th:last-child, td:last-child {
   border-right: none;
 }
+
+#header-username{
+  font-size: var(--small-font);
+  color: black !important;
+  font-weight: bold;
+}
