--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md bg-body py-3">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="/"
+      <a class="navbar-brand d-flex align-items-center" href="/movies/"
         ><span
           class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"
           ><svg
@@ -30,13 +30,13 @@
       <div id="navcol-2" class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Movies</a>
+            <a class="nav-link active" id="nav-movies" href="/movies/">Movies</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Wishlist</a>
+            <a class="nav-link" id="nav-wishlist" href="/wishlists/">Wishlist</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Welcome Gláucio!</a>
+            <a class="nav-link" href="#">Welcome <span class="fw-bolder" id="header-username"></span>!</a>
           </li>
         </ul>
         <a href="#" onclick="logout()">(Sign Out)</a>
