--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -30,10 +30,10 @@
       <div id="navcol-2" class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" id="nav-movies" href="/movies/">Movies</a>
+            <a class="nav-link" id="nav-movies" href="/movies/">Movies</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="nav-wishlist" href="/wishlists/">Wishlist</a>
+            <a class="nav-link" id="nav-wishlists" href="/wishlists/">Wishlist</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Welcome <span class="fw-bolder" id="header-username"></span>!</a>
