--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,12 +30,12 @@ header {
   justify-content: space-between;
   padding: 0 10px;
 }
-#login-form{
+#login-form {
   margin: 20px auto;
   padding: 10px;
   width: 70%;
 }
-.center{
+.center {
   text-align: center;
 }
 .logo {
@@ -129,7 +129,7 @@ button {
 }
 .products {
   padding: 0.5em;
-	text-align: center;
+  text-align: center;
 }
 .product-list {
   display: flex;
@@ -302,21 +302,20 @@ input {
 }
 
 .alert {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	background-color: orange;;
-	padding: 10px;
-	font-size: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: orange;
+  padding: 10px;
+  font-size: 20px;
 }
 
 .form {
-	display: flex;
-	flex-direction: column;
-	width: 50%;
-	margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin: 0 auto;
 }
-
 
 table {
   width: 100%;
@@ -329,7 +328,8 @@ table {
   overflow: hidden;
 }
 
-th, td {
+th,
+td {
   padding: 12px 15px;
   text-align: left;
 }
@@ -354,15 +354,17 @@ td {
   border-bottom: 1px solid #ddd;
 }
 
-th:first-child, td:first-child {
+th:first-child,
+td:first-child {
   border-left: none;
 }
 
-th:last-child, td:last-child {
+th:last-child,
+td:last-child {
   border-right: none;
 }
 
-#header-username{
+#header-username {
   font-size: var(--small-font);
   color: black !important;
   font-weight: bold;
