--- a/src/public/partials/footer.html
+++ b/src/public/partials/footer.html
@@ -1,5 +1,4 @@
 <footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-    </ul>
-    <p class="text-center text-body-secondary">© 2025 MovieDB, Inc</p>
+  <ul class="nav justify-content-center border-bottom pb-3 mb-3"></ul>
+  <p class="text-center text-body-secondary">© 2025 MovieDB, Inc</p>
 </footer>
