--- a/partials/header.html
+++ b/partials/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md bg-body py-3">
   <div class="container">
-    <a class="navbar-brand d-flex align-items-center" href="/movies/"
+    <a class="navbar-brand d-flex align-items-center" href="/wdd330-moviedb/movies/"
       ><span
         class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"
         ><svg
@@ -30,10 +30,10 @@
     <div id="navcol-2" class="collapse navbar-collapse">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" id="nav-movies" href="/movies/">Movies</a>
+          <a class="nav-link" id="nav-movies" href="/wdd330-moviedb/movies/">Movies</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="nav-wishlists" href="/wishlists/">Wishlist</a>
+          <a class="nav-link" id="nav-wishlists" href="/wdd330-moviedb/wishlists/">Wishlist</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#"
